--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
-{
+{ "name": "backend",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "ts-node src/index.ts"
+  },
   "dependencies": {
     "apollo-datasource-rest": "^3.5.3",
     "apollo-server": "^3.7.0",
